--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
   "dependencies": {
     "@types/node-fetch": "^2.5.7",
     "env-cmd": "^10.1.0",
+    "mysql": "^2.18.1",
     "node-fetch": "^2.6.0",
+    "typeorm": "^0.2.25",
+    "uuidv4": "^6.2.3",
     "winston": "^3.3.3"
   },
   "devDependencies": {
