--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/node-fetch": "^2.5.7",
+    "class-transformer": "^0.3.1",
     "env-cmd": "^10.1.0",
     "mysql": "^2.18.1",
     "node-fetch": "^2.6.0",
