--- a/package.json
+++ b/package.json
@@ -17,18 +17,21 @@
   "author": "Pedro Medina",
   "license": "ISC",
   "dependencies": {
-    "@types/node-fetch": "^2.5.7",
     "class-transformer": "^0.3.1",
+    "dotenv": "^8.2.0",
     "env-cmd": "^10.1.0",
-    "mysql": "^2.18.1",
+    "mysql2": "^2.1.0",
     "node-fetch": "^2.6.0",
-    "typeorm": "^0.2.25",
+    "sequelize": "5.22.3",
     "uuidv4": "^6.2.3",
     "winston": "^3.3.3"
   },
   "devDependencies": {
+    "@types/bluebird": "^3.5.32",
     "@types/jest": "^26.0.10",
     "@types/node": "^14.6.1",
+    "@types/node-fetch": "^2.5.7",
+    "@types/validator": "^13.1.0",
     "@typescript-eslint/eslint-plugin": "^3.10.1",
     "@typescript-eslint/parser": "^3.10.1",
     "eslint": "^7.7.0",
@@ -41,6 +44,8 @@
     "lint-staged": "^10.2.13",
     "nodemon": "^2.0.4",
     "prettier": "^2.1.1",
+    "reflect-metadata": "^0.1.13",
+    "sequelize-typescript": "^1.1.0",
     "ts-jest": "^26.3.0",
     "ts-node": "^8.10.2",
     "tsconfig-paths": "^3.9.0",
