--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
   "author": "Pedro Medina",
   "license": "ISC",
   "dependencies": {
+    "@types/ioredis": "^4.17.6",
     "class-transformer": "^0.3.1",
     "dotenv": "^8.2.0",
     "env-cmd": "^10.1.0",
+    "ioredis": "^4.19.1",
     "mysql2": "^2.2.5",
     "node-fetch": "^2.6.1",
     "sequelize": "5.22.3",
@@ -32,26 +34,26 @@
   },
   "devDependencies": {
     "@ef-carbon/tspm": "^2.2.5",
-    "@types/bluebird": "^3.5.32",
-    "@types/jest": "^26.0.14",
-    "@types/node": "^14.11.8",
+    "@types/bluebird": "^3.5.33",
+    "@types/jest": "^26.0.15",
+    "@types/node": "^14.14.6",
     "@types/node-fetch": "^2.5.7",
     "@types/validator": "^13.1.0",
     "@typescript-eslint/eslint-plugin": "^3.10.1",
     "@typescript-eslint/parser": "^3.10.1",
-    "eslint": "^7.11.0",
-    "eslint-config-prettier": "^6.12.0",
+    "eslint": "^7.12.1",
+    "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-jest": "^23.20.0",
     "eslint-plugin-prettier": "^3.1.4",
     "git-commit-msg-linter": "^2.7.0",
     "husky": "^4.3.0",
-    "jest": "^26.5.3",
-    "lint-staged": "^10.4.0",
-    "nodemon": "^2.0.4",
+    "jest": "^26.6.1",
+    "lint-staged": "^10.5.0",
+    "nodemon": "^2.0.6",
     "prettier": "^2.1.2",
     "reflect-metadata": "^0.1.13",
     "sequelize-typescript": "^1.1.0",
-    "ts-jest": "^26.4.1",
+    "ts-jest": "^26.4.3",
     "ts-node": "^8.10.2",
     "tsconfig-paths": "^3.9.0",
     "typescript": "^3.9.7"
