--- a/package.json
+++ b/package.json
@@ -21,13 +21,12 @@
   "author": "Pedro Medina",
   "license": "ISC",
   "dependencies": {
-    "@types/ioredis": "^4.17.6",
     "class-transformer": "^0.3.1",
     "dotenv": "^8.2.0",
     "env-cmd": "^10.1.0",
-    "ioredis": "^4.19.1",
     "mysql2": "^2.2.5",
     "node-fetch": "^2.6.1",
+    "redis": "^3.0.2",
     "sequelize": "5.22.3",
     "uuidv4": "^6.2.4",
     "winston": "^3.3.3"
@@ -38,6 +37,7 @@
     "@types/jest": "^26.0.15",
     "@types/node": "^14.14.6",
     "@types/node-fetch": "^2.5.7",
+    "@types/redis": "^2.8.28",
     "@types/validator": "^13.1.0",
     "@typescript-eslint/eslint-plugin": "^3.10.1",
     "@typescript-eslint/parser": "^3.10.1",
