--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postbuild": "ef-tspm",
     "test": "jest",
     "dev": "env-cmd -f ./src/config/dev.env nodemon -L",
+    "executeTasks": "env-cmd -f ./src/config/dev.env node build/apps/scheduledTasks/scheduledTasks.js",
     "ccaaJob": "env-cmd -f ./src/config/dev.env node build/apps/scheduledTasks/Jobs/CCAAJob.js",
     "fuelStationsJob": "env-cmd -f ./src/config/dev.env node build/apps/scheduledTasks/Jobs/FuelStationsJob.js"
   },
@@ -25,6 +26,7 @@
     "dotenv": "^8.2.0",
     "env-cmd": "^10.1.0",
     "mysql2": "^2.2.5",
+    "node-cron": "^2.0.3",
     "node-fetch": "^2.6.1",
     "redis": "^3.0.2",
     "sequelize": "5.22.3",
@@ -36,6 +38,7 @@
     "@types/bluebird": "^3.5.33",
     "@types/jest": "^26.0.15",
     "@types/node": "^14.14.6",
+    "@types/node-cron": "^2.0.3",
     "@types/node-fetch": "^2.5.7",
     "@types/redis": "^2.8.28",
     "@types/validator": "^13.1.0",
