--- a/package.json
+++ b/package.json
@@ -25,9 +25,13 @@
     "class-transformer": "^0.3.1",
     "dotenv": "^8.2.0",
     "env-cmd": "^10.1.0",
+    "express": "^4.17.1",
+    "express-validator": "^6.6.1",
+    "helmet": "^4.1.1",
     "mysql2": "^2.2.5",
     "node-cron": "^2.0.3",
     "node-fetch": "^2.6.1",
+    "rate-limiter-flexible": "^2.1.13",
     "redis": "^3.0.2",
     "sequelize": "5.22.3",
     "uuidv4": "^6.2.4",
@@ -35,7 +39,9 @@
   },
   "devDependencies": {
     "@ef-carbon/tspm": "^2.2.5",
-    "@types/bluebird": "^3.5.33",
+    "@types/express": "^4.17.8",
+    "@types/express-validator": "^3.0.0",
+    "@types/helmet": "^4.0.0",
     "@types/jest": "^26.0.15",
     "@types/node": "^14.14.6",
     "@types/node-cron": "^2.0.3",
