--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,13 +1,18 @@
 {
   "version": "0.2.0",
   "configurations": [
-    {
-      "type": "node",
-      "request": "launch",
-      "name": "Debug App",
-      "runtimeArgs": ["--nolazy", "-r", "ts-node/register"],
-      "args": ["${workspaceFolder}/src/main.ts"],
-      "autoAttachChildProcesses": true
-    }
+      {
+          "type": "node",
+          "request": "launch",
+          "name": "Build Project",
+          "program": "${workspaceFolder}\\apps\\api\\app.ts",
+          "preLaunchTask": "npm: build",
+          "sourceMaps": true,
+          "smartStep": true,
+          "internalConsoleOptions": "openOnSessionStart",
+          "outFiles": [
+              "${workspaceFolder}/build/**/*.js"
+          ]
+      }
   ]
 }
