--- a/src/config/.env
+++ b/src/config/.env
@@ -1,6 +1,13 @@
 LOGGER=
+SERVER_PORT=
 MYSQL_HOST=
+MYSQL_PORT=
 MYSQL_DATABASE=
 MYSQL_USER=
 MYSQL_PASSWORD=
 MYSQL_ROOT_PASSWORD=
+REDIS_HOST=
+REDIS_PORT=
+RATE_LIMITER_POINTS=
+RATE_LIMITER_DURATION=
+RATE_LIMITER_KEY_PREFIX=
