--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "env-cmd": "^10.1.0",
     "express": "^4.17.1",
     "express-validator": "^6.6.1",
+    "firebase-admin": "^9.3.0",
     "geolocation-utils": "^1.2.3",
     "helmet": "^4.1.1",
     "mysql2": "^2.2.5",
