feat: notifications implementation

--- a/src/config/.env
+++ b/src/config/.env
@@ -11,3 +11,7 @@ REDIS_PORT=
 RATE_LIMITER_POINTS=
 RATE_LIMITER_DURATION=
 RATE_LIMITER_KEY_PREFIX=
+FCM_PROJECT_ID=
+FCM_PROJECT_KEY=
+FCM_CLIENT_EMAIL=
+APP_TOKEN=
