--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "description": "Full Fuel API",
   "main": "index.ts",
   "scripts": {
-    "clean": "rm -r ./build",
     "lint": "eslint \"./src/**/*.{ts,tsx}\" --quiet --fix",
     "build": "npm run lint && tsc",
     "postbuild": "ef-tspm",
+    "postinstall": "patch-package",
     "test": "jest",
-    "dev": "env-cmd -f ./src/config/dev.env nodemon -L",
+    "dev": "nodemon -L",
     "executeTasks": "env-cmd -f ./src/config/dev.env node build/apps/scheduledTasks/scheduledTasks.js",
     "ccaaJob": "env-cmd -f ./src/config/dev.env node build/apps/scheduledTasks/Jobs/CCAAJob.js",
     "fuelStationsJob": "env-cmd -f ./src/config/dev.env node build/apps/scheduledTasks/Jobs/FuelStationsJob.js"
@@ -61,6 +61,7 @@
     "jest": "^26.6.1",
     "lint-staged": "^10.5.0",
     "nodemon": "^2.0.6",
+    "patch-package": "^6.2.2",
     "prettier": "^2.1.2",
     "reflect-metadata": "^0.1.13",
     "sequelize-typescript": "^1.1.0",
