--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "redis": "^3.0.2",
     "sequelize": "5.22.3",
     "uuidv4": "^6.2.4",
-    "winston": "^3.3.3"
+    "winston": "^3.3.3",
+    "winston-daily-rotate-file": "^4.5.0"
   },
   "devDependencies": {
     "@ef-carbon/tspm": "^2.2.5",
