chore: added redis client password key

--- a/src/config/.env
+++ b/src/config/.env
@@ -8,6 +8,7 @@ MYSQL_PASSWORD=
 MYSQL_ROOT_PASSWORD=
 REDIS_HOST=
 REDIS_PORT=
+REDIS_PASSWORD=
 RATE_LIMITER_POINTS=
 RATE_LIMITER_DURATION=
 RATE_LIMITER_KEY_PREFIX=
