--- a/docker-compose.travis.yml
+++ b/docker-compose.travis.yml
@@ -2,7 +2,9 @@ version: '3.3'
 
 services:
   app:
-    build: ./
+    build:
+      context: ./
+      dockerfile: dockerfile.dev
     volumes:
       - .:/usr/src/app
       - /usr/src/app/node_modules
