--- a/src/config/.env
+++ b/src/config/.env
@@ -6,9 +6,7 @@ MYSQL_DATABASE=
 MYSQL_USER=
 MYSQL_PASSWORD=
 MYSQL_ROOT_PASSWORD=
-REDIS_HOST=
-REDIS_PORT=
-REDIS_PASSWORD=
+REDIS_CONNECTION_PATH=
 RATE_LIMITER_POINTS=
 RATE_LIMITER_DURATION=
 RATE_LIMITER_KEY_PREFIX=
