--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "test": "jest --detectOpenHandles --forceExit --silent",
     "dev": "nodemon -L",
     "executeTasks": "node build/apps/scheduledTasks/scheduledTasks.js",
+    "cacheJob": "node build/apps/scheduledTasks/jobs/CacheJob.js",
     "ccaaJob": "node build/apps/scheduledTasks/jobs/CCAAJob.js",
     "fuelStationsJob": "node build/apps/scheduledTasks/jobs/FuelStationsJob.js",
     "notificationsJob": "node build/apps/scheduledTasks/jobs/NotificationsJob.js"
