--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ services:
       - ./src/config/docker.env
     ports:
       - '8000:8000'
+    container_name: api_app
     depends_on:
       - mysql
       - redis
@@ -27,6 +28,7 @@ services:
       - ./src/config/dev.env
     ports:
       - '3306:3306'
+    container_name: api_db
     volumes:
       - ./dbdata:/var/lib/mysql
     networks:
@@ -35,6 +37,7 @@ services:
   redis:
     image: redis:alpine
     restart: always
+    container_name: api_cache
     ports:
       - '6379:6379'
     networks:
